# realsr-ncnn-vulkan-python

./: .gitignore  .gitmodules  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: CI.yml  ci.yml  release.yml
realsr_ncnn_vulkan_python/: CMakeLists.txt  realsr.i  realsr_ncnn_vulkan.py  realsr_wrapped.cpp  realsr_wrapped.h
src/: CMakeLists.txt  realsr.cpp  realsr.h  realsr_ncnn_vulkan.py  realsr_wrapped.cpp  realsr_wrapped.h
tests/: test_upscale.py
